--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "gsap": "^3.12.2",
+    "mouse-follower": "^1.1.2",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
