--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "firebase": "^10.3.0",
     "gsap": "^3.12.2",
     "mouse-follower": "^1.1.2",
     "next": "13.4.19",
