--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "react-particles": "^2.12.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
+    "tsparticles-slim": "^2.12.0",
     "typescript": "5.2.2"
   }
 }
